force-app/main/default/objects/CCX_Customer__c/CCX_Customer__c.object-meta.xml
<CustomObject>
    <label>CCX_Customer</label>
    <nameField>
        <label>CustName</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CCX_Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>