force-app/main/default/objects/CCX_Customer__c/fields/Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>Balance_Due__c</fullName>
    <formula>Total_Billed_Amount__c -  Total_Amount_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>