force-app/main/default/objects/CCX_Customer__c/fields/CustId__c.field-meta.xml
<CustomField>
    <fullName>CustId__c</fullName>
    <displayFormat>CustId-{000}</displayFormat>
    <label>CustId</label>
    <type>AutoNumber</type>
</CustomField>