force-app/main/default/objects/CCX_Customer__c/fields/CustType__c.field-meta.xml
<CustomField>
    <fullName>CustType__c</fullName>
    <label>CustType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Wholesaler</fullName>
                <label>WholeSaler</label>
            </value>
            <value>
                <fullName>Retailer</fullName>
            </value>
            <value>
                <fullName>New Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>