force-app/main/default/objects/CCX_Customer__c/fields/Total_Billed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Billed_Amount__c</fullName>
    <label>Total Billed Amount</label>
    <summarizedField>CCX_Order__c.Net_Order_Detail_Total__c</summarizedField>
    <summaryForeignKey>CCX_Order__c.CCX_Customer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>