force-app/main/default/objects/CCX_Customer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Total_Billed_Amount__c</columns>
    <columns>Total_Amount_Paid__c</columns>
    <columns>Balance_Due__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>